--- a/generel.css
+++ b/generel.css
@@ -13,7 +13,8 @@ img {
 :root {
   --d_grey: #3b3939;
   --l_grey: #726c69;
-  --beige: #f1efd8;
+  --beige: #e6dfcf;
+  --l_beige: #e6dfcf31;
   --blue: #6294f1;
   --yellow: #f9f33d;
 }
@@ -55,7 +56,7 @@ main {
   display: grid;
   margin: 5vh;
   gap: 1rem;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: 1fr;
   grid-template-rows: repeat(3, auto);
 }
 
@@ -102,25 +103,24 @@ main {
 .card {
   position: relative;
   display: grid;
-  grid-row: span 6;
+  grid-row: span 8;
   grid-template-rows: subgrid;
-  gap: inherit;
+  gap: 10px;
 
-  /*** STYLE ***/
-  border-style: solid;
-  border-color: var(--l_grey);
+  background-color: var(--l_beige);
+  padding-bottom: 2vh;
 }
 
 .img_so {
   filter: grayscale(90%);
 }
 /** TEXT **/
-.text {
-  font-size: 90%;
-  margin-bottom: 10vh;
+.title,
+.cat,
+.article,
+.price {
   padding: 1vh;
 }
-
 .cat,
 .article {
   color: var(--l_grey);
@@ -145,27 +145,39 @@ main {
 
 .link {
   position: absolute;
-  font-size: 130%;
+  margin-top: 5rem;
   padding: 0.5vh;
-  color: var(--blue);
-  font-weight: 700;
   bottom: 0;
   left: 0;
-  text-decoration: double;
+  font-family: "Sulphur Point", serif;
+  font-size: 130%;
+  color: var(--blue);
+  font-weight: 700;
+  text-decoration: none;
 }
-.link a {
-  text-decoration: double;
-}
+
 .link:hover {
   color: var(--d_grey);
-  text-decoration: double;
+  border-bottom: 2px solid var(--d_grey);
+}
+
+/**** FOOTER ****/
+footer {
+  background-color: var(--beige);
+  margin-top: 15vh;
+  padding: 15vh;
+}
+.set_3 {
+  display: grid;
+  gap: 2rem;
+  grid-template-columns: repeat(3, 1fr);
 }
 
 /*** DESKTOP ***/
 @media (min-width: 800px) {
   /*** CATEGORIES ***/
   .set_3x3 {
-    grid-template-columns: 1fr;
+    grid-template-columns: repeat(3, 1fr);
   }
 
   /***** CARDS *****/
